<ul>
	<li>V0.9.3 Devel
  	<ul>
		<li>2003-09-09 HS - Fix for casts with created WITHOUT FUNCTION (binary compatible).
		<li>2003-09-09 AP - fix grid for tables with multicolumn pk
		<li>2003-09-08 HS - Don't crash when selecting SQL command help when not connected to a server
		<li>2003-09-08 AP - update query tool toolbar after clipboard cut/copy
		<li>2003-09-08 AP - fix trigger dialog for multiple events
		<li>2003-09-08 AP - export and option dialog partially bigger
		<li>2003-09-06 AP - missed some strings for translation
		<li>2003-09-03 AP - fixing the grid's edit control 
		<li>2003-09-03 AP - enabling menu etc from a collection's properties listview, including a bugfix if the object wasn't expanded and still had a dummy child.
    </ul>
	<li>V0.9.2 Beta
  	<ul>
		<li>2003-09-02 AP - include public trigger functions
		<li>2003-08-29 AP - frmEditGrid: double click on labels resizes column or row
		<li>2003-08-28 AP - handle editor scrolling in frmEditGrid
		<li>2003-08-28 AP - Fix numeric truncation in frmEditGrid
   		<li>2003-08-25 AP - SSL support for win32.
		<li>2003-08-25 AP - save SSL option under Servers/SSL%d.
		<li>2003-08-24 AP - Provide dummy child item to make [+] appear in tree for table and view.
		<li>2003-08-24 AP - proxy option.
		<li>2003-08-24 AP - Shift-F10 in tree control for context menu.
		<li>2003-08-23 AP - Fixed missing comments and function arguments.
		<li>2003-08-21 AP - Using EVT_TEXT for combobox selchange events.
		<li>2003-08-21 AP - encoding names read from backend, removed from resource.
		<li>2003-08-19 DP - Prevent comments on view columns causing display problems.
		<li>2003-08-19 Marc Persuy - Updated wxWindows-pgAdmin3 to resolve FreeBSD 5.1 locale search bug.
		<li>2003-08-18 DP - Correctly quote primary key name in Edit Grid. Was preventing viewing of data in some tables.
		<li>2003-08-17 AP - added REINDEX, frmVacuum->frmMaintenance.
		<li>2003-08-15 AP - added SSL-support.