@@ -1,6 +1,7 @@
 <ul>
 	<li>V0.9.3 Devel
   	<ul>
+		<li>2003-09-09 HS - Correctly quote the ANY keyword in aggregate definitions.
 		<li>2003-09-09 HS - Fix for casts with created WITHOUT FUNCTION (binary compatible).
 		<li>2003-09-09 AP - fix grid for tables with multicolumn pk
 		<li>2003-09-08 HS - Don't crash when selecting SQL command help when not connected to a server
